--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@ant-design/nextjs-registry": "^1.0.0",
 		"@auth/mongodb-adapter": "^1.0.0",
 		"@headlessui/react": "^1.7.18",
+		"@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
 		"ahooks": "^3.8.0",
 		"antd": "^5.20.0",
 		"axios": "^1.6.8",
