--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@auth/mongodb-adapter": "^1.0.0",
 		"@headlessui/react": "^1.7.18",
 		"@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
+		"ahooks": "^3.8.1",
 		"axios": "^1.6.8",
 		"crisp-sdk-web": "^1.0.22",
 		"eslint": "8.47.0",
