--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.4.0",
 		"@ant-design/nextjs-registry": "^1.0.0",
 		"@auth/mongodb-adapter": "^1.0.0",
 		"@headlessui/react": "^1.7.18",
